Bug 320393 Tree list items should have accessible RELATION_NODE_OF relation patch by nian.liu at sun.com r=aaronleventhal sr=roc