accessible/src/xul/nsXULTreeAccessible.h
@@ -114,6 +114,7 @@ public:
   NS_IMETHOD TakeSelection(void); 
   NS_IMETHOD TakeFocus(void); 
 
+  NS_IMETHOD GetAccessibleRelated(PRUint32 aRelationType, nsIAccessible **aRelated);
   /* ------ nsIAccessNode ----- */
   NS_IMETHOD GetUniqueID(void **aUniqueID);
 
